cree el metodo para guardar el libro en base de datos.